--- a/public/forms.css
+++ b/public/forms.css
@@ -38,7 +38,7 @@
     border: none;
     border-radius: 5px;
     background-color: var(--INPUT);
-    width: 250px;
+    width: 100%;
     height: 40px;
     padding-left: 10px;
     margin-top: 10px;
